--- a/SyncArea/SyncArea/Components/Pages/Admin/Dialog/ViewUserWorkspacesDialog.razor
+++ b/SyncArea/SyncArea/Components/Pages/Admin/Dialog/ViewUserWorkspacesDialog.razor
@@ -9,7 +9,7 @@
         <MudDataGrid T="WorkspaceDto" Items="@Workspaces" MultiSelection="false">
             <Columns>
                 <PropertyColumn Title="名称" Property="x => x.Name" />
-                <PropertyColumn Title="房间号" Property="x => x.RoomNumber" />
+                <PropertyColumn Title="项目号" Property="x => x.RoomNumber" />
                 <PropertyColumn Title="创建时间" Property="x => x.CreatedAt" />
                 @* 一个删除按钮 *@
                 <TemplateColumn>
