--- a/SyncArea/SyncArea/Components/IdentityPage/AccessDenied.razor
+++ b/SyncArea/SyncArea/Components/IdentityPage/AccessDenied.razor
@@ -1,6 +1,8 @@
 ﻿@page "/AccessDenied"
 <h3 style="text-align:center">暂无权访问此页面!</h3>
-<MudLink Href="/">回到主页</MudLink>
+<div class="d-flex justify-center">
+<MudLink   Typo="Typo.h4" Href="/">回到主页</MudLink>
+</div>
 @code {
 
 }
