--- a/SyncArea/SyncArea/Components/IdentityPage/Login.razor
+++ b/SyncArea/SyncArea/Components/IdentityPage/Login.razor
@@ -15,7 +15,7 @@
             <DataAnnotationsValidator />
             <MudCard Outlined>
                 <MudCardHeader>
-                    <MudText Typo="Typo.h5">登录页面</MudText>
+                    <MudText Typo="Typo.h6">文件管理系统</MudText>
                 </MudCardHeader>
                 <MudCardContent>
                     <MudTextField Variant="Variant.Outlined"
