--- a/SyncArea/SyncArea/Components/Pages/Workspace/LookImage.razor
+++ b/SyncArea/SyncArea/Components/Pages/Workspace/LookImage.razor
@@ -2,26 +2,28 @@
 @inject IJSRuntime JSRuntime
 @implements IAsyncDisposable
 
-<MudPaper Outlined Class="pa-4 d-flex flex-column" Style="width: 80vw; max-width: 800px;">
+<MudPaper Outlined Class="pa-4 d-flex flex-column gap-2" Style="max-height: 90vh; overflow: hidden;">
     <div class="ml-auto mb-2 d-flex gap-2">
         <MudButton Variant="Variant.Outlined" Color="Color.Primary" OnClick="DownloadImage">下载</MudButton>
         <MudButton Variant="Variant.Outlined" Color="Color.Error" OnClick="CloseDialog">关闭</MudButton>
     </div>
 
-    <div class="d-flex justify-center align-center mb-2 gap-4"  tabindex="0">
+    <div class="d-flex flex-column align-center justify-center" style="flex-grow: 1; max-height: 70vh; overflow: hidden;">
+        <MudImage Src="@CurrentUrl"
+            Fluid/>
+            </div>
+    <div class="d-flex">
         <MudButton Variant="Variant.Outlined" Color="Color.Primary" OnClick="ShowPrevious" Disabled="!CanNavigate" Style="min-width: 100px;">上一张</MudButton>
-        <div style="flex-grow: 1; flex-shrink: 1; max-height: 70vh;">
-            <MudImage Src="@CurrentUrl" Fluid Style="width: 100%; height: 100%; object-fit: contain;" />
-        </div>
+        <MudSpacer></MudSpacer>
         <MudButton Variant="Variant.Outlined" Color="Color.Primary" OnClick="ShowNext" Disabled="!CanNavigate" Style="min-width: 100px;">下一张</MudButton>
     </div>
 
     <div class="text-center mt-2">
         @if (_imageUrls.Any())
         {
-        <p style="text-align:center">
-        第 @(_currentIndex + 1)  / @(_imageUrls.Count) 张
-        </p>
+            <p style="text-align:center">
+                第 @(_currentIndex + 1)  / @(_imageUrls.Count) 张
+            </p>
         }
     </div>
 </MudPaper>
